# c-analyser

./: README.md  db.py  main.py  model.py  requirements.txt
examples/: light.yaml  simple.yaml
examples/light/: CMakeLists.txt  lib.c  lib.h  light.c  light.h  main.c  types.h
examples/simple/: main.c
examples/simple/utils/: data.c  data.h  io_utils.c  io_utils.h
